Adicionando aba de listas

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <h2>Sobre o que é esse projeto?</h2>
            <p> Meu plano é atualizar este site com base no que vou aprendendo na faculdade, colocar meus conhecimentos em teste e me divertir um pouco enquanto programo. </p>
         
-        <p> <a href="pages.html/sobremim.html"> Sobre mim </a> </p>
+        <p> <a href="pages.html/sobremim.html">Sobre mim</a> </p>
 
          <a href="pages.html/tabela.html">Tabelas</a>
+
+         <p> <a href="pages.html/listas.html">Listas</a> </p>
 
 
 
