Adicionando CSS nas pastas

--- a/pages.html/atividadelista.html
+++ b/pages.html/atividadelista.html
@@ -3,11 +3,11 @@
     <head>
         <title>Atividade de lista</title>
         <meta charset="utf=8">
+        <link rel="stylesheet" href="../Css/estilo.css">
 
     </head>
-
     <body>
-        <h2>Atividade:</h2>
+        <h1>Atividade:</h1>
             <p>Criar uma lista de compras personalizada</p>
 
         <ol>
@@ -31,20 +31,10 @@
                 </ul>
         </ol>
 
-   <p> <a href="listas.html">Listas</a> </p>
-
-
-
-
-
-
-
-            
-
+        <nav>
+            <ul>
+                <li><a href="listas.html">Listas</a></li>
+            </ul>
+        </nav>
     </body>
-
-
-
-
-
 </html>
