--- a/pages.html/listas.html
+++ b/pages.html/listas.html
@@ -3,9 +3,8 @@
     <head>
         <title>Listas</title>
         <meta charset="utf=8">
-
+        <link rel="stylesheet" href="../Css/estilo.css">
     </head>
-
     <body>
         <h1>Listas aprendidas</h1>
 
@@ -51,16 +50,12 @@
                     HTML é o esqueleto do site. É uma linguagem de marcação que organiza o conteúdo (textos, imagens e links) através de tags, definindo a estrutura e a hierarquia do que aparece na tela.
                 </dd>
                 </dl>
-        <p> <a href="../index.html">Inicio</a>  </p>
-                <p> <a href="atividadelista.html">Atividade</a>  </p>
 
-
+                <nav>
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>  
+                        <li><a href="atividadelista.html">Atividade</a></li> 
+                    </ul>
+                </nav>
     </body>
-
-
-
-
-
-
-
 </html>
