--- a/pages.html/tabela.html
+++ b/pages.html/tabela.html
@@ -3,8 +3,8 @@
     <head>
         <title>Tabelas</title>
         <meta charset="utf=8">
+        <link rel="stylesheet" href="../Css/estilo.css">
     </head>
-
     <body>
         <h1>Tabelas Aprendidas</h1>
        <p> Aqui vou adicionar as tabelas que aprendi na aula de hoje!! </p>
@@ -51,12 +51,11 @@
 
         </table>
 
-
-        </table>
-
-        <p> <a href="../index.html">Inicio</a>  </p>
-    </body>
-
-
-
+        <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li> 
+         
+           </ul>
+        </nav>
+   </body>
 </html>
