--- a/index.html
+++ b/index.html
@@ -4,27 +4,20 @@
     <head>
         <title>Meu primeiro site</title>
         <meta charset="utf=8">
+        <link rel="stylesheet" href="Css/estilo.css">
     </head>
-
     <body>
         <h1>Projeto de site</h1>
         
         <h2>Sobre o que é esse projeto?</h2>
            <p> Meu plano é atualizar este site com base no que vou aprendendo na faculdade, colocar meus conhecimentos em teste e me divertir um pouco enquanto programo. </p>
-        
-        <p> <a href="pages.html/sobremim.html">Sobre mim</a> </p>
 
-         <a href="pages.html/tabela.html">Tabelas</a>
-
-         <p> <a href="pages.html/listas.html">Listas</a> </p>
-
-
-
+        <nav>
+            <ul>
+                <li><a href="pages.html/sobremim.html">Sobre mim</a></li>
+                <li><a href="pages.html/tabela.html">Tabelas</a></li>
+                 <li><a href="pages.html/listas.html">Listas</a></li> 
+            </ul>
+        </nav>
     </body>
-
-
-
-
-
-
 </html>
