--- a/pages.html/sobremim.html
+++ b/pages.html/sobremim.html
@@ -3,19 +3,18 @@
     <head>
         <title>Sobre Mim</title>
         <meta charset="utf=8">
-
+        <link rel="stylesheet" href="../Css/estilo.css">
     </head>
     <body>
-           <h2>Sobre mim:</h2> 
+           <h1>Sobre mim:</h1> 
             <p> Meu nome é Júlio, tenho 19 anos e faço faculdade de Análise e Desenvolvimento de Sistemas. Comecei na programação quando tinha 15 anos, porque meus amigos da internet sempre mostravam os projetos que estavam criando. Eu ficava impressionado com aquilo, ver algo sair do zero e ganhar forma na tela me despertava uma curiosidade enorme e um fascínio que eu não sabia explicar direito.
         No começo eu não entendia quase nada, mas a vontade de aprender era maior que a dificuldade. Eu queria programar igual a eles, queria também ter algo meu para mostrar, algo que eu pudesse olhar e dizer que fui eu quem fez. Então comecei a tentar. Errava, travava, pesquisava, voltava e tentava de novo. E, de certa forma, ainda é assim.
         Hoje continuo nesse processo, aprendendo, errando e evoluindo um pouco todos os dias. Trabalho no Aeroporto de Guarulhos enquanto estudo e sigo com o objetivo de conquistar um estágio na área até o fim do ano. </p>
 
-        <a href="../index.html">Inicio</a>
-
-
+        <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+            </ul>
+        </nav>
     </body>
-
-
-
 </html>
